--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.7/quill.snow.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <style>
-body{
-    background: pink;
-}
+
 </style>
 <body>
-    <div>
-        okr
-    </div>
+    <!-- <div id="editSection"></div> -->
+    <!-- Include stylesheet -->
+
+
+<!-- Create the editor container -->
+<div id="editor">
+  <p>Hello World!</p>
+  <p>Some initial <strong>bold</strong> text</p>
+  <p><br></p>
+</div>
+<div onclick="getcontent()">getContent</div>
+
 </body>
+<!-- Include the Quill library -->
+<script src=" https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.7/quill.js"></script>
+
+<!-- Initialize Quill editor -->
+<script>
+  var quill = new Quill('#editor', {
+    theme: 'snow'
+  });
+ function getcontent() {
+    var delta = quill.getContents();
+    console.log(delta); 
+  }
+  window.quill = quill;
+//   function getCnt() {
+//     var delta = quill.getContents();
+//     console.log(delta);
+//   }
+</script>
 </html>
